<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_map"
            android:checked="true"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/item_map" />
        <item
            android:id="@+id/item_start_trip"
            android:icon="@drawable/ic_start_flag"
            android:title="@string/item_start_trip" />
        <item
            android:id="@+id/item_my_trips"
            android:checked="true"
            android:icon="@drawable/ic_start_flag"
            android:title="@string/item_my_trips" />
        <item
            android:id="@+id/item_health_status"
            android:icon="@drawable/ic_health_status"
            android:title="@string/item_health_status" />
        <item
            android:id="@+id/item_settings"
            android:checked="true"
            android:icon="@drawable/ic_settings"
            android:title="@string/item_settings" />
    </group>
</menu>