<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_4"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/location_settings" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_update_distance"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_height"
                    android:layout_marginLeft="@dimen/spacing_4"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/update_distance" />

                <TextView
                    android:id="@+id/tv_distance_proximity"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_height"
                    android:layout_marginLeft="@dimen/spacing_4"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/distance_proximity" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_display_location"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/textview_height"
                        android:layout_marginLeft="@dimen/spacing_4"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/display_location" />

                    <CheckBox
                        android:id="@+id/chk_display_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_4"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/legal" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_terms"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_height"
                    android:layout_marginLeft="@dimen/spacing_4"
                    android:gravity="center_vertical"
                    android:hint="@string/terms_of_service"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/tv_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_height"
                    android:layout_marginLeft="@dimen/spacing_4"
                    android:gravity="center_vertical"
                    android:hint="@string/privacy"
                    android:singleLine="true" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_4"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/account" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_height"
                    android:layout_marginLeft="@dimen/spacing_4"
                    android:gravity="center_vertical"
                    android:hint="@string/log_in"
                    android:singleLine="true" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <!-- your content layout -->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu" />
</android.support.v4.widget.DrawerLayout>