<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar"
            android:id="@+id/layout_toolbar"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_below="@+id/layout_toolbar"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_4"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_trip_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:hint="@string/trip_name"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/et_start_location"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:visibility="gone"
                    android:hint="@string/start_location"
                    android:singleLine="true"/>

                <AutoCompleteTextView
                    android:id="@+id/et_end_location"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:hint="@string/end_location"
                    android:singleLine="true"
                    android:textCursorDrawable="@null"
                    android:textColor="#000000"/>

                <Button
                    android:id="@+id/btn_start_trip"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:text="@string/start_trip"
                    android:textSize="@dimen/font_medium"
                    android:textColor="@color/white"
                    android:background="@drawable/app_button"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <FrameLayout
            android:layout_width="match_parent"
            android:id="@+id/fl_progress"
            android:visibility="gone"
            android:clickable="true"
            android:layout_height="match_parent">

            <ProgressBar
                style="@style/Base.Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:layout_height="wrap_content" />

        </FrameLayout>


    </RelativeLayout>

    <!-- your content layout -->
    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer_menu" />
</android.support.v4.widget.DrawerLayout>